--- a/TeamProject/templates/manager.html
+++ b/TeamProject/templates/manager.html
@@ -69,17 +69,17 @@
                 <option value="1">게시글</option>
                 <option value="2">댓글</option>
             </select>
-            <button class="category_plus_btn plus_btn">체크 리스트 삭제</button>
+            <button class="report_check_del_btn plus_btn">체크 리스트 삭제</button>
         </div>
 
         <div class="report_container">
             <div class="report_sub_title report">
                 <input type="checkbox" disabled class="r_item">
                 <span class="r_item">신고 날짜</span>
-                <span class="r_item">게시글 제목</span>
+                <span class="r_item">제목</span>
                 <span class="r_item">신고 사유</span>
                 <span class="r_item">회원 정지</span>
-                <span class="r_item">게시글 삭제</span>
+                <span class="r_item">삭제</span>
                 <span class="r_item">처리</span>
             </div>
             <div class="line2"></div>
@@ -90,8 +90,8 @@
                     <span class="r_item">ㅇ</span>
                     <span class="r_item">ㅇ</span>
                     <button id="report_blacklist_btn" class="report_btn r_item">회원 정지</button>
-                    <button id="report_post_del_btn" class="report_btn r_item">삭제</button>
-                    <button id="report_del_btn" class="report_btn r_item">X</button>
+                    <button id="report_del_btn" class="report_btn r_item">삭제</button>
+                    <button id="report_cancel_btn" class="report_btn r_item">V</button>
                 </div>
                 <div class="report">
                     <input type="checkbox" class="r_item">
@@ -99,8 +99,8 @@
                     <span class="r_item">아ㅋㅋ 진짜 코딩 너무재밌네</span>
                     <span class="r_item">홍보 및 낚시성 게시글</span>
                     <button id="report_blacklist_btn" class="report_btn r_item">회원 정지</button>
-                    <button id="report_post_del_btn" class="report_btn r_item">삭제</button>
-                    <button id="report_del_btn" class="report_btn r_item">X</button>
+                    <button id="report_del_btn" class="report_btn r_item">삭제</button>
+                    <button id="report_cancel_btn" class="report_btn r_item">V</button>
                 </div>
                 <div class="report">
                     <input type="checkbox" class="r_item">
@@ -108,8 +108,8 @@
                     <span class="r_item">아ㅋㅋ 진짜 코딩 너무재밌네</span>
                     <span class="r_item">홍보 및 낚시성 게시글</span>
                     <button id="report_blacklist_btn" class="report_btn r_item">회원 정지</button>
-                    <button id="report_post_del_btn" class="report_btn r_item">삭제</button>
-                    <button id="report_del_btn" class="report_btn r_item">X</button>
+                    <button id="report_del_btn" class="report_btn r_item">삭제</button>
+                    <button id="report_cancel_btn" class="report_btn r_item">V</button>
                 </div>
                 <div class="report">
                     <input type="checkbox" class="r_item">
@@ -117,8 +117,8 @@
                     <span class="r_item">아ㅋㅋ 진짜 코딩 너무재밌네</span>
                     <span class="r_item">홍보 및 낚시성 게시글</span>
                     <button id="report_blacklist_btn" class="report_btn r_item">회원 정지</button>
-                    <button id="report_post_del_btn" class="report_btn r_item">삭제</button>
-                    <button id="report_del_btn" class="report_btn r_item">X</button>
+                    <button id="report_del_btn" class="report_btn r_item">삭제</button>
+                    <button id="report_cancel_btn" class="report_btn r_item">V</button>
                 </div>
                 <div class="report">
                     <input type="checkbox" class="r_item">
@@ -126,8 +126,8 @@
                     <span class="r_item">아ㅋㅋ 진짜 코딩 너무재밌네</span>
                     <span class="r_item">홍보 및 낚시성 게시글</span>
                     <button id="report_blacklist_btn" class="report_btn r_item">회원 정지</button>
-                    <button id="report_post_del_btn" class="report_btn r_item">삭제</button>
-                    <button id="report_del_btn" class="report_btn r_item">X</button>
+                    <button id="report_del_btn" class="report_btn r_item">삭제</button>
+                    <button id="report_cancel_btn" class="report_btn r_item">V</button>
                 </div>
             </div>
         </div>
@@ -164,8 +164,8 @@
                     <span class="r_item">케빈</span>  
                     <span class="r_item">gg0113@naver.com</span>
                     <span class="r_item">1997-01-01</span>
-                    <button class="report_btn r_item">정보 수정</button>
-                    <button class="report_btn r_item">회원 삭제</button>
+                    <button id="user_modify_btn" class="report_btn r_item">정보 수정</button>
+                    <button id="user_del_btn" class="report_btn r_item">회원 삭제</button>
                 </div>
                 <div class="user">
                     <span class="r_item">케빈캉</span>
@@ -173,8 +173,8 @@
                     <span class="r_item">케빈</span>  
                     <span class="r_item">gg0113@naver.com</span>
                     <span class="r_item">1997-01-01</span>
-                    <button class="report_btn r_item">정보 수정</button>
-                    <button class="report_btn r_item">회원 삭제</button>
+                    <button id="user_modify_btn" class="report_btn r_item">정보 수정</button>
+                    <button id="user_del_btn" class="report_btn r_item">회원 삭제</button>
                 </div>
                 <div class="user">
                     <span class="r_item">케빈캉</span>
@@ -182,8 +182,8 @@
                     <span class="r_item">케빈</span>  
                     <span class="r_item">gg0113@naver.com</span>
                     <span class="r_item">1997-01-01</span>
-                    <button class="report_btn r_item">정보 수정</button>
-                    <button class="report_btn r_item">회원 삭제</button>
+                    <button id="user_modify_btn" class="report_btn r_item">정보 수정</button>
+                    <button id="user_del_btn" class="report_btn r_item">회원 삭제</button>
                 </div>
                 <div class="user">
                     <span class="r_item">케빈캉</span>
@@ -191,8 +191,8 @@
                     <span class="r_item">케빈</span>  
                     <span class="r_item">gg0113@naver.com</span>
                     <span class="r_item">1997-01-01</span>
-                    <button class="report_btn r_item">정보 수정</button>
-                    <button class="report_btn r_item">회원 삭제</button>
+                    <button id="user_modify_btn" class="report_btn r_item">정보 수정</button>
+                    <button id="user_del_btn" class="report_btn r_item">회원 삭제</button>
                 </div>
                 <div class="user">
                     <span class="r_item">케빈캉</span>
@@ -200,13 +200,13 @@
                     <span class="r_item">케빈</span>  
                     <span class="r_item">gg0113@naver.com</span>
                     <span class="r_item">1997-01-01</span>
-                    <button class="report_btn r_item">정보 수정</button>
-                    <button class="report_btn r_item">회원 삭제</button>
+                    <button id="user_modify_btn" class="report_btn r_item">정보 수정</button>
+                    <button id="user_del_btn" class="report_btn r_item">회원 삭제</button>
                 </div>
             </div>
-            
-
         </div>
+
+        <div id="user_modify_modal_container"></div>
         
     </div>
 
