게시글 이미지 연결 (2020.09.24)
-게시글이미지연결

--- a/TeamProject/static/css/post.css
+++ b/TeamProject/static/css/post.css
@@ -293,6 +293,14 @@
 	line-height: 1.6;
 	white-space: pre-line;
 }
+.info_img{
+	position: relative;
+	margin-top: 20px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
 .info_img img{
 	max-width: 80%;
 	margin: 10px;
@@ -478,7 +486,7 @@
 
 
 
-@media screen and (max-width: 1080px) {
+@media screen and (max-width: 1200px) {
 	.post{
 		width: 100%;
 	}
