메인페이지 회원 정보 이미지까지 불러오기 + 이미지 정리 (20.09.24)

--- a/TeamProject/templates/main.html
+++ b/TeamProject/templates/main.html
@@ -42,10 +42,10 @@
         <div class="slider_wrap">
             <div class="slider">
                 <div class="s_btn_left s_btn">
-                    <img src="../static/img/arrow-left.png" alt="" class="s_btn_img">
+                    <img src="../static/img/main_img/arrow-left.png" alt="" class="s_btn_img">
                 </div>
                 <div class="s_btn_right s_btn">
-                    <img src="../static/img/arrow-right.png" alt="" class="s_btn_img">
+                    <img src="../static/img/main_img/arrow-right.png" alt="" class="s_btn_img">
                 </div>
             </div>
         </div>
@@ -71,10 +71,10 @@
 
     <div class="b_container aos-animate aos-init" data-aos="zoom-in" data-aos-duration="1000">
         <div class="b_btn_left b_btn">
-            <img src="../static/img/arrow-left.png" alt="" class="b_btn_img">
+            <img src="../static/img/main_img/arrow-left.png" alt="" class="b_btn_img">
         </div>
         <div class="b_btn_right b_btn">
-            <img src="../static/img/arrow-right.png" alt="" class="b_btn_img">
+            <img src="../static/img/main_img/arrow-right.png" alt="" class="b_btn_img">
         </div>
         <div class="category_container">
 
