--- a/TeamProject/templates/manager.html
+++ b/TeamProject/templates/manager.html
@@ -13,7 +13,7 @@
 
             <div class="nav_menus">
                 <div class="nav_logo">
-                    <img src="../static/img/m_icon.png" class="nav_logo_icon">
+                    <img src="../static/img/main_img/m_icon.png" class="nav_logo_icon">
                     <a href="/" class="nav_logo_name">ROOM</a>
                 </div>
                 <a href="/" class="nav_menu">MAIN</a>
