--- a/TeamProject/static/css/main.css
+++ b/TeamProject/static/css/main.css
@@ -11,6 +11,9 @@ body {
 	background: var(--color_ivory);
 	font-family: sans-serif;
 }
+html{
+	scroll-behavior: smooth;
+}
 
 .container {
 	height: 100vh;
@@ -18,13 +21,27 @@ body {
 	align-items: center;
 	justify-content: center;
 	flex-direction: column;
-	background-image: url("../img/main_img/door1.jpg");
+	/* background-image: url("../img/main_img/door1.jpg");
 	background-size: 100vw 100vh;
-	background-repeat: no-repeat;
-	color: whitesmoke;
+	background-repeat: no-repeat; */
+	color: var(--color_ivory);
+	background: var(--color_dark);
 	font-weight: bold;
 	position: relative;
 }
+
+.main_arrow{
+	position: absolute;
+	bottom: 12vh;
+	color: var(--color_ivory);
+	transition: .5s all;
+	opacity: 0.8;
+}
+.main_arrow:hover{
+	opacity: 0.5;
+	transform: translateY(1rem);
+}
+
 
 .background_layer{
 	background-color: rgba(255,255,255, 0.08);
@@ -47,19 +64,12 @@ body {
 	margin-top: 1rem;
 }
 
-.sub_title1 {
+.sub_title {
 	font-size: 1.7em;
 	font-weight: bold;
-	padding: 10vh 12vw 3vh;
-	color: var(--color_ivory);
-	background: black;
-}
-
-.sub_title2 {
-	font-size: 1.7em;
-	font-weight: bold;
-	padding: 10vh 12vw 3vh;
+	padding: 10vh 0 3vh;
 	color: var(--color_dark);
+	text-align: center;
 }
 
 a:link, a:visited, a:active {
@@ -258,7 +268,6 @@ a:link, a:visited, a:active {
 	height: 100vh;
 	z-index: 10;
 	top: 0;
-	/* display: none; */
 }
 
 .signup_modal {
@@ -364,11 +373,14 @@ a:link, a:visited, a:active {
 .s_container {
 	background: #303030;
 	color: var(--color_ivory);
+	width: 90vw;
+	margin: 0 auto;
+	border-radius: 0.5rem;
+	overflow: hidden;
 }
 
 .slider_wrap {
-	width: 100%;
-	height: 290px;
+	height: 240px;
 	position: relative;
 	overflow: hidden;
 }
@@ -377,31 +389,34 @@ a:link, a:visited, a:active {
 	position: absolute;
 	left: 0;
 	transition: all .5s;
-	height: 290px;
-	width: 247vw;
+	height: 240px;
+	width: 200vw;
 }
 
 .slide {
 	transition: all .5s;
 	float: left;
 	position: relative;
-	width: 24.7vw;
-	text-align: center;
+	width: calc(90vw/6);
 	opacity: 0.6;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 }
 
 .slide div {
 	margin: 10px 0;
-	font-size: 20px;
+	font-size: 1.3rem;
 	font-weight: 600;
 }
 
 .s_img {
+	width: 150px;
+	height: 150px;
+	border-radius: 20%;
 	margin-top: 15px;
-	width: 230px;
-	height: 230px;
-	border-radius: 30%;
-	background: white;
 }
 
 @media screen and (max-width: 1024px) {
@@ -411,8 +426,7 @@ a:link, a:visited, a:active {
 	}
 
 	.slider_wrap {
-		width: 100%;
-		height: 260px;
+		height: 220px;
 		position: relative;
 		overflow: hidden;
 	}
@@ -421,26 +435,26 @@ a:link, a:visited, a:active {
 		position: absolute;
 		left: 0;
 		transition: all .5s;
-		height: 260px;
-		width: 247vw;
+		height: 220px;
+		width: 200vw;
 	}
 
 	.slide div {
 		margin: 10px 0;
-		font-size: 20px;
+		font-size: 1.1rem;
 		font-weight: 600;
 	}
 
 	.s_img {
 		margin-top: 15px;
-		width: 200px;
-		height: 200px;
+		width: 120px;
+		height: 120px;
 	}
 
 	.s_btn,
 	.s_btn_img {
-		width: 80px !important;
-		height: 80px !important;
+		width: 70px !important;
+		height: 70px !important;
 	}
 
 	.s_btn {
@@ -459,18 +473,18 @@ a:link, a:visited, a:active {
 }
 
 .bar {
-	width: calc(100%/7);
+	width: calc(100%/5);
 	height: 15px;
 	background: var(--color_yellow);
-	opacity: 0.8;
+	opacity: 1;
 	left: 0;
 	position: absolute;
 	transition: all .5s;
 }
 
 .s_btn {
-	width: 100px;
-	height: 100px;
+	width: 80px;
+	height: 80px;
 	position: fixed;
 	z-index: 2;
 	transform: translateY(110%);
@@ -485,23 +499,23 @@ a:link, a:visited, a:active {
 }
 
 .s_btn_left {
-	left: 0;
+	left: 10px;
 }
 
 .s_btn_right {
-	right: 0;
+	right: 10px;
 }
 
 .s_btn_img {
-	width: 100px;
-	height: 100px;
+	width: 80px;
+	height: 80px;
 }
 
 
 /* ------------- 베스트 게시글 -------------- */
 .best_post_container {
-	padding: 5vh 10vh;
-	width: 70vw;
+	padding: 5vh 5vw;
+	width: 80vw;
 	margin: 0 auto;
 	border-radius: 10px;
 	background: var(--color_dark);
@@ -510,6 +524,7 @@ a:link, a:visited, a:active {
 	display: grid;
 	grid-template-columns: repeat(auto-fill, minmax(45%, auto));
 	gap: 20px;
+	text-align: center;
 }
 
 .best_post_board_name{
@@ -537,8 +552,8 @@ a:link, a:visited, a:active {
 	color: white;
 	font-weight: bold;
 
-	padding: 5vh 10vh 10vh;
-	width: 70vw;
+	padding: 5vh 5vw 10vh;
+	width: 80vw;
 	min-height: 60vh;
 	border-radius: 10px;
 	margin-bottom: 10vh;
@@ -610,16 +625,17 @@ a:link, a:visited, a:active {
 .board_page_container{
 	bottom: 1.5rem;
 	position: absolute;
-    left: 37.5vw;
+	margin: 0 auto;
+	left:0;
+	right:0;
 }
 
 .pages{
-	margin-right: 1rem;
+	margin: 0 1rem;
 	padding: 0.3rem 0.5rem;
 	font-weight: bold;
 	background: var(--color_yellow);
-	border-radius: 4px;
-
+	border-radius: 2px;
 }
 .pages.p_active{
 	color: var(--color_dark) !important;
