--- a/TeamProject/static/css/post.css
+++ b/TeamProject/static/css/post.css
@@ -39,13 +39,15 @@
 }
 .post_preview{
 	position: relative;
-	max-height: 90%;
+	margin-right:20px;
+	height: 90%;
+	width: 10%;
 
 }
 .post_component{
 	position: relative;
-	margin-left: 20px;
-	width: calc( 100% - 100px );
+	/*margin-left: 20px;*/
+	width: 90%;
 	height: 90%;
 	display: inline-flex;
 	flex-direction: column;
@@ -70,6 +72,7 @@
 	display: flex;
 	align-items: : center;
 	align-self: flex-end;
+	padding-right: 10px;
 }
 .post_profileImg{
 	max-height: 20px;
@@ -83,9 +86,9 @@
 }
 .post_date{
 	margin-left: 10px;
+	margin-right: 10px;
 }
 .post_like{
-	margin-left: 10px;
 	margin-right: 5px;
 	font-weight: 550;
 }
@@ -301,12 +304,12 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	align-items: center;
+	align-items: flex-start;
 }
 .info_img img{
 	max-width: 80%;
 	max-height: 1000px;
-	margin: 10px;
+	margin-bottom: 10px;
 }
 .info_writer{
 	position: relative;
@@ -395,6 +398,7 @@
 	height: 140px;
 }
 .comment_item hr{
+	margin-top: 20px;
 	border-top: 1px solid #bbb;
 	opacity: 30%;
 
@@ -457,7 +461,6 @@
 	position: relative;
 	margin: 5px;
 	width: 100%;
-	height: 70px;
 	font-size: 1.2em
 
 }
