메인페이지 개편 전 커밋 (20.09.27)

--- a/TeamProject/templates/main.html
+++ b/TeamProject/templates/main.html
@@ -17,8 +17,8 @@
             <span class="logo">ROOMS</span>
         </div>
         <div class="sub_container">
-            <span class="main_login">Login</span> |
-            <span class="main_signup">Sign up</span>
+            <span class="main_login">로그인</span> |
+            <span class="main_signup">회원가입</span>
         </div>
         <div class="search_container">
             <i class="fas fa-search fa-2x search_icon"></i>
