--- a/TeamProject/static/css/main.css
+++ b/TeamProject/static/css/main.css
@@ -60,7 +60,7 @@ html{
 
 .sub_container {
 	float: right;
-	font-size: 1.3em;
+	font-size: 1.1em;
 	margin-top: 1rem;
 }
 
@@ -69,7 +69,8 @@ html{
 	font-weight: bold;
 	padding: 10vh 0 3vh;
 	color: var(--color_dark);
-	text-align: center;
+	text-align: left;
+	margin-left: 5vw;
 }
 
 a:link, a:visited, a:active {
@@ -114,7 +115,7 @@ a:link, a:visited, a:active {
 	outline: none;
 	border: solid 2px var(--color_ivory);
 	border-radius: 4px;
-	color: darkorange;
+	color: var(--color_yellow);
 	font-size: 1rem;
 	font-weight: bold;
 
@@ -131,7 +132,7 @@ a:link, a:visited, a:active {
 	background-repeat: no-repeat;
 }
 .search::placeholder{
-	color: darkorange;
+	/* color: var(--color_yellow); */
 }
 
 .search:focus {
@@ -142,7 +143,7 @@ a:link, a:visited, a:active {
 	background-position: 0 0;
 }
 .search:focus.search::placeholder{
-	color:darkorange;
+	/* color:var(--color_yellow); */
 }
 .search_submit{
 	z-index : 2;
@@ -496,6 +497,7 @@ a:link, a:visited, a:active {
 	opacity: 0.8;
 	background: var(--color_ivory);
 	border-radius: 50%;
+	cursor: pointer;
 }
 
 .s_btn_left {
@@ -524,7 +526,7 @@ a:link, a:visited, a:active {
 	display: grid;
 	grid-template-columns: repeat(auto-fill, minmax(45%, auto));
 	gap: 20px;
-	text-align: center;
+	text-align: left;
 }
 
 .best_post_board_name{
@@ -604,7 +606,7 @@ a:link, a:visited, a:active {
 
 .board_container{
 	display: grid;
-	grid-template-columns: repeat(auto-fill, minmax(45%, auto));
+	grid-template-columns: repeat(auto-fill, minmax(21%, auto));
 	gap: 20px;
 	z-index: 1;
 	transition-duration: .5s;
