UI 부분 수정 (2020.09.28)

--- a/TeamProject/static/css/post.css
+++ b/TeamProject/static/css/post.css
@@ -460,6 +460,8 @@
 .comment_content{
 	position: relative;
 	margin: 5px;
+	margin-top: 10px;
+	margin-bottom: 30px;
 	width: 100%;
 	font-size: 1.2em
 
