--- a/TeamProject/templates/post.html
+++ b/TeamProject/templates/post.html
@@ -65,11 +65,11 @@
 				</div>
 				<div class="side_adWrap">
 					<input type="button" id="adButton_1" value="X">
-					<img src="https://www.book21.com/data/book/FILE147727631769.jpg">
+					<img src="http://127.0.0.1:5000/static/img/KZYmXtjB.jpg">
 				</div>
 				<div class="side_adWrap">
 					<input type="button" id="adButton_2" value="X">
-					<img src="https://i.pinimg.com/originals/42/7b/5f/427b5f6ed9161578e73bf6b5e43fd2e2.jpg">
+					<img src="http://127.0.0.1:5000/static/img/KZYmXtjB.jpg">
 				</div>
 
 
