--- a/TeamProject/static/css/style.css
+++ b/TeamProject/static/css/style.css
@@ -253,9 +253,11 @@ button {
 }
 
 .side_adWrap img{
-	max-width: 100%;
+	align-self: center;
+	max-width: 80%;
 	margin-bottom: 10px;
 	overflow: hidden;
+	opacity: 0.6;
 
 }
 .side_search{
