--- a/TeamProject/static/css/post.css
+++ b/TeamProject/static/css/post.css
@@ -4,7 +4,7 @@
 	display:inline-flex;
 	flex-direction:column;
 	justify-content: flex-start;
-	align-items: center;
+	align-items: flex-start;
 	background: transparent;
 	width: calc( 95% - 360px );
 	margin-top: 20px;
@@ -27,15 +27,21 @@
 	display: flex;
 	justify-content: flex-start;
 	align-items : center;
-	background-color: white;
+	background-color: var(--component);
 	padding: 10px;
 	margin-bottom: 20px;
 	cursor: pointer;
-	border-radius: 5px;
+
+	border-style: none;
+/*	border-radius: 5px;
+*/			border:0;
+	box-shadow:0 2px 6px 0 hsla(0,0%,0%,0.2);
+	border-right: 7px solid var(--point);
 
 }
+
 .post__lists__item:hover{
-	background-color: lightgray;
+	background-color: var(--point);
 }
 .post_preview{
 	position: relative;
@@ -77,8 +83,8 @@
 .post_profileImg{
 	max-height: 20px;
 	max-width:20px;
-	border-radius: 50%;
-}
+/*	border-radius: 50%;
+*/}
 .post_nickname{
 	margin-left: 5px;
 	font-weight: 600;
@@ -105,19 +111,24 @@
 .post_input{
 	width: 100%;
 
+
 }
 .input__off{
 	width: 100%;
 	height: 30px;
 	display: flex;
 	align-items: center;
-	background-color: lightgray;
+	background-color: var(--component);
 	cursor: pointer;
-	border-radius: 5px;
+/*	border-radius: 5px;
+*/			border:0;
+	box-shadow:0 2px 6px 0 hsla(0,0%,0%,0.2);
+/*		border-left: 7px solid var(--point);*/
 
 }
 .input__off p{
 	margin-left: 10px;
+
 }
 
 .input__on{
@@ -126,26 +137,29 @@
 	align-items: center;
 	width:100%;
 	height: 100%;
+			border:0;
+	box-shadow:0 2px 6px 0 hsla(0,0%,0%,0.2);
 
 }
 .input__subject{
 	width: 100%;
 	height: 30px;
 	margin-bottom: 5px;
-	border-radius: 5px;
-	border: 0px;
+/*	border-radius: 5px;
+*/	border: 0px;
 	text-indent: 10px;
 	font-size: 18px;
 	font-style: bold;
 	outline: none;
+		border-top: 7px solid var(--point);
 }
 .input__article{
 	padding: 5px;
 	resize: none;
 	width: calc(100% - 10px);
 	height: 300px;
-	border-radius: 5px 5px 0 0;
-	border: 0px;
+/*	border-radius: 5px 5px 0 0;
+*/	border: 0px;
 	font-size: 15px;
 	outline: none;
 
@@ -156,8 +170,8 @@
 	overflow: hidden;
 	width: 100%;
 	height: 70px;
-	border-radius: 0,0,5px 5px;
-	background-color: white;
+/*	border-radius: 0,0,5px 5px;
+*/	background-color: var(--component);
 
 }
 
@@ -199,9 +213,9 @@
 	margin-bottom: 10px;
 	font-size: 1em;
 	color:white;
-	background-color: #8a0a8a;
-	border-radius: 5px;
-	padding: 2px;
+	background-color: var(--point);
+/*	border-radius: 5px;
+*/	padding: 2px;
 	cursor: pointer;
 }
 .input__buttons input:nth-child(2){
@@ -219,6 +233,8 @@
 	align-content: center;
 	width:100%;
 
+		border-top: 7px solid var(--point);
+
 }
 .info_maintext{
 	position: relative;
@@ -227,8 +243,8 @@
 	align-content: center;
 	width: 95%;
 	padding:2.5%;
-	border-radius: 5px;
-	background-color: white;
+/*	border-radius: 5px;
+*/	background-color: var(--component);
 }
 .info_top{
 	position: relative;
@@ -266,8 +282,8 @@
 .infoTop_sub img{
 	max-height: 20px;
 	max-width: 20px;
-	border-radius: 50%;
-	margin-right: 5px;
+/*	border-radius: 50%;
+*/	margin-right: 5px;
 }
 .infoSub_nickname{
 	font-size: 13px;
@@ -319,8 +335,8 @@
 	position: relative;
 	max-height: 80px;
 	max-width: 80px;
-	border-radius: 50%;
-}
+/*	border-radius: 50%;
+*/}
 .infoWriter_nickname{
 	position: relative;
 	top : -45px;
@@ -344,23 +360,26 @@
 	width: 60px;
 	height: 30px;
 	margin-left: 15px;
-	border-radius: 10%;
-	background-color: white;
+/*	border-radius: 10%;
+*/	background-color: var(--component);
 }
 .info_buttons input:hover{
-	background-color: gray;
+	background-color: var(--point);
 	cursor: pointer;
 }
 .comment{
 	position: relative;
-	margin-top: 5px;
+	margin-top: 20px;
 	width: 95%;
 	padding:2.5%;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	border-radius: 5px;
-	background-color: white;
+/*	border-radius: 5px;
+*/	background-color: var(--component);
+				border:0;
+	box-shadow:0 2px 6px 0 hsla(0,0%,0%,0.2);
+		border-top: 7px solid var(--point);
 
 }
 .comment_num{
@@ -414,8 +433,8 @@
 	top:5px;
 	max-height: 50px;
 	max-width: 50px;
-	border-radius: 50%;
-}
+/*	border-radius: 50%;
+*/}
 .comment_info{
 	position: relative;
 	width: calc(100%-60px);
