--- a/TeamProject/static/css/post.css
+++ b/TeamProject/static/css/post.css
@@ -83,8 +83,8 @@
 .post_profileImg{
 	max-height: 20px;
 	max-width:20px;
-/*	border-radius: 50%;
-*/}
+	border-radius: 50%;
+}
 .post_nickname{
 	margin-left: 5px;
 	font-weight: 600;
@@ -170,6 +170,7 @@
 	overflow: hidden;
 	width: 100%;
 	height: 70px;
+	border-style: none;
 /*	border-radius: 0,0,5px 5px;
 */	background-color: var(--component);
 
@@ -217,6 +218,8 @@
 /*	border-radius: 5px;
 */	padding: 2px;
 	cursor: pointer;
+			border:0;
+	box-shadow:0 2px 6px 0 hsla(0,0%,0%,0.2);
 }
 .input__buttons input:nth-child(2){
 	right: 35px;
@@ -282,8 +285,8 @@
 .infoTop_sub img{
 	max-height: 20px;
 	max-width: 20px;
-/*	border-radius: 50%;
-*/	margin-right: 5px;
+	border-radius: 50%;
+	margin-right: 5px;
 }
 .infoSub_nickname{
 	font-size: 13px;
@@ -335,8 +338,8 @@
 	position: relative;
 	max-height: 80px;
 	max-width: 80px;
-/*	border-radius: 50%;
-*/}
+	border-radius: 50%;
+}
 .infoWriter_nickname{
 	position: relative;
 	top : -45px;
@@ -433,8 +436,8 @@
 	top:5px;
 	max-height: 50px;
 	max-width: 50px;
-/*	border-radius: 50%;
-*/}
+	border-radius: 50%;
+}
 .comment_info{
 	position: relative;
 	width: calc(100%-60px);
