--- a/TeamProject/static/css/style.css
+++ b/TeamProject/static/css/style.css
@@ -395,6 +395,9 @@ button {
 	font-weight: 700;
 	font-size: 1em;
 	cursor: pointer;
+			border:0;
+	box-shadow:0 2px 6px 0 hsla(0,0%,0%,0.2);
+
 }
 .post_goTop:hover{
 	background-color: var(--point);
